--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -18,3 +18,19 @@ header {
 .imgSub {
   justify-content: center;
 }
+
+.bookTitle {
+  display: flex;
+  justify-content: space-between;
+}
+
+.myButtons {
+  padding-right: 30px;
+  margin-top: 25px;
+}
+
+.booksImg {
+  float: left;
+  margin-left: 15px;
+  margin-right: 30px;
+}
