--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,36 +1,50 @@
 header {
-  display: flex;
+    display: flex;
 }
 
 .logo {
-  padding-right: 20px;
+    padding-right: 20px;
 }
 
 .mainBody {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .subtitle {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 .imgSub {
-  justify-content: center;
+    justify-content: center;
 }
 
-.bookTitle {
-  display: flex;
-  justify-content: space-between;
+.bookTitle, .authorTitle {
+    display: flex;
+    justify-content: space-between;
+}
+
+.mainTitle {
+    width: 400px;
 }
 
 .myButtons {
-  padding-right: 30px;
-  margin-top: 25px;
+    padding-right: 30px;
+    margin-top: 25px;
 }
 
-.booksImg {
-  float: left;
-  margin-left: 15px;
-  margin-right: 30px;
+.booksImg, .authorImg {
+    float: left;
+    margin-left: 15px;
+    margin-right: 30px;
+    height: 200px;
+    width: 200px;
+}
+
+.addLayout {
+    margin-left: 40%;
+}
+
+.deleteComplete {
+  margin-left: 40%;
 }
