--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,9 +1,25 @@
 header {
     display: flex;
+    background-color: rgb(245, 245, 245);
 }
 
 .logo {
+    margin-left: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     padding-right: 20px;
+    height: 100px;
+    width: 100px;
+}
+
+.logoTitle {
+  padding-top: 22px;
+    font-family: "Brush Script MT", cursive;
+    font-size: 75px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
 }
 
 .mainBody {
@@ -46,13 +62,13 @@ header {
 }
 
 .deleteComplete, .deleteAuthorComplete {
-  margin-left: 40%;
+    margin-left: 40%;
 }
 
-.myAuthors > *::after {
-  content: ", ";
+.myAuthors>*::after {
+    content: ", ";
 }
 
-.myAuthors >:last-child::after {
-  content: "";
+.myAuthors>:last-child::after {
+    content: "";
 }
